Add test for attaching to live processes
In preparation for exposing IDebugControl interfaces, verify that we can
write tests against attachment to live processes.

--- a/src/Microsoft.Diagnostics.Runtime.Tests/Microsoft.Diagnostics.Runtime.Tests.csproj
+++ b/src/Microsoft.Diagnostics.Runtime.Tests/Microsoft.Diagnostics.Runtime.Tests.csproj
@@ -57,7 +57,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Compile Include="HeapTests.cs" />
+    <Compile Include="LiveProcessTests.cs" />
     <Compile Include="MethodTests.cs" />
+    <None Include="Targets\LiveProcess.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Compile Include="TypeTests.cs" />
     <Compile Include="MinidumpTests.cs" />
     <Compile Include="ModuleTests.cs" />
